[gd_scene load_steps=22 format=3 uid="uid://b14glku3kr23n"]

[ext_resource type="PackedScene" uid="uid://d4mmehk8jrrto" path="res://scenes/templates/exit_button.tscn" id="1_ybcku"]
[ext_resource type="Script" uid="uid://b4y6yumhp0y13" path="res://scripts/AsteroidShooter/player.gd" id="2_afidj"]
[ext_resource type="Script" uid="uid://dvfoble2cq0q7" path="res://scripts/AsteroidShooter/bullet.gd" id="2_asjkd"]
[ext_resource type="Script" uid="uid://cdkarhoyyaww6" path="res://scripts/AsteroidShooter/start_button.gd" id="2_t13xm"]
[ext_resource type="Texture2D" uid="uid://c6ra6w73t0bf7" path="res://scripts/AsteroidShooter/Media/White_triangle.svg.png" id="2_x37lq"]
[ext_resource type="Script" uid="uid://bqutef4p3ttk3" path="res://scripts/AsteroidShooter/score_label.gd" id="4_8dmoq"]
[ext_resource type="Texture2D" uid="uid://crb1vgkqapdjf" path="res://scripts/AsteroidShooter/Media/blue.png" id="4_afidj"]
[ext_resource type="Script" uid="uid://eykmsifyt7ym" path="res://scripts/AsteroidShooter/blur.gd" id="7_cuk1y"]
[ext_resource type="Script" uid="uid://x5swyj3bqhgi" path="res://scripts/AsteroidShooter/boulder.gd" id="7_llpqh"]
[ext_resource type="Texture2D" uid="uid://53unuext77eo" path="res://scripts/AsteroidShooter/Media/WhiteCircle.png" id="8_t13xm"]
[ext_resource type="Script" uid="uid://cp17i6kmdevls" path="res://scripts/AsteroidShooter/animation_player.gd" id="9_b57t4"]
[ext_resource type="Script" uid="uid://ws2sihpcdop6" path="res://scripts/AsteroidShooter/restart_button.gd" id="12_xpkfe"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x37lq"]
size = Vector2(20, 664)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_afidj"]
size = Vector2(20, 1168)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_asjkd"]
size = Vector2(18, 56)

[sub_resource type="CircleShape2D" id="CircleShape2D_cuk1y"]
radius = 64.0

[sub_resource type="Gradient" id="Gradient_b57t4"]
offsets = PackedFloat32Array(0.5594059, 0.9786096)
colors = PackedColorArray(0.5254902, 0.5254902, 0.5254902, 0.8039216, 0.5254902, 0.5254902, 0.5254902, 0.8039216)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xpkfe"]
gradient = SubResource("Gradient_b57t4")

[sub_resource type="Animation" id="Animation_cuk1y"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Score:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-16, 16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Score:theme_override_font_sizes/font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [48]
}

[sub_resource type="Animation" id="Animation_t13xm"]
resource_name = "ScoreToCentre"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Score:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-16, 16), Vector2(-16, 232)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Score:theme_override_font_sizes/font_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [48, 128]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b57t4"]
_data = {
&"RESET": SubResource("Animation_cuk1y"),
&"ScoreToCentre": SubResource("Animation_t13xm")
}

[node name="AsteroidShooter" type="Node2D"]

[node name="OuterWalls" type="Node2D" parent="."]

[node name="NegativeY" type="StaticBody2D" parent="OuterWalls"]
position = Vector2(-8, 320)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="OuterWalls/NegativeY"]
shape = SubResource("RectangleShape2D_x37lq")

[node name="PositiveY" type="StaticBody2D" parent="OuterWalls"]
position = Vector2(1160, 320)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="OuterWalls/PositiveY"]
shape = SubResource("RectangleShape2D_x37lq")

[node name="NegativeX" type="StaticBody2D" parent="OuterWalls"]
position = Vector2(576, -8)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="OuterWalls/NegativeX"]
rotation = 1.5707964
shape = SubResource("RectangleShape2D_afidj")

[node name="PositiveX" type="StaticBody2D" parent="OuterWalls"]
position = Vector2(576, 656)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="OuterWalls/PositiveX"]
rotation = 1.5707964
shape = SubResource("RectangleShape2D_afidj")

[node name="Bullet" type="CharacterBody2D" parent="."]
position = Vector2(576, 320)
collision_layer = 3
collision_mask = 3
script = ExtResource("2_asjkd")
metadata/is_shot = false

[node name="Visual" type="Sprite2D" parent="Bullet"]
position = Vector2(-2.2888184e-05, 8.702278e-06)
scale = Vector2(0.05, 0.213)
texture = ExtResource("4_afidj")

[node name="CollisionArea" type="Area2D" parent="Bullet"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bullet/CollisionArea"]
shape = SubResource("RectangleShape2D_asjkd")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(576, 320)
collision_layer = 7
collision_mask = 7
motion_mode = 1
script = ExtResource("2_afidj")
metadata/is_player = true

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Player"]
position = Vector2(0, 16)
rotation = -3.1415927
scale = Vector2(1, 5.8125)
polygon = PackedVector2Array(0, 8, 32, -2.7526875, -32, -2.7526894)

[node name="WhiteTriangle_svg" type="Sprite2D" parent="Player"]
scale = Vector2(0.03125, 0.03125)
texture = ExtResource("2_x37lq")

[node name="FireCooldown" type="Timer" parent="Player"]
process_callback = 0
wait_time = 0.3
one_shot = true

[node name="Boulder" type="CharacterBody2D" parent="."]
position = Vector2(576, -88)
collision_layer = 3
collision_mask = 3
script = ExtResource("7_llpqh")
metadata/is_in_play = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Boulder"]
shape = SubResource("CircleShape2D_cuk1y")

[node name="WhiteCircle" type="Sprite2D" parent="Boulder"]
position = Vector2(7.6293945e-06, -1.9073486e-06)
scale = Vector2(0.095333345, 0.095333345)
texture = ExtResource("8_t13xm")

[node name="SpawnTimer" type="Timer" parent="Boulder"]
wait_time = 0.2

[node name="Blur" type="TextureRect" parent="."]
visible = false
offset_left = -64.0
offset_top = -24.0
offset_right = 1200.0
offset_bottom = 680.0
texture = SubResource("GradientTexture1D_xpkfe")
script = ExtResource("7_cuk1y")

[node name="Score" type="Label" parent="."]
offset_left = -16.0
offset_top = 16.0
offset_right = 1168.0
offset_bottom = 191.0
theme_override_font_sizes/font_size = 48
text = "Score: 0"
horizontal_alignment = 1
script = ExtResource("4_8dmoq")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_b57t4")
}
script = ExtResource("9_b57t4")

[node name="StartButton" type="Button" parent="."]
offset_left = 896.0
offset_top = 24.0
offset_right = 1123.0
offset_bottom = 96.0
theme_override_font_sizes/font_size = 32
text = "Start"
script = ExtResource("2_t13xm")

[node name="ExitButton" parent="." instance=ExtResource("1_ybcku")]

[node name="RestartButton" type="Button" parent="."]
visible = false
offset_left = 112.0
offset_right = 216.0
offset_bottom = 104.0
text = "Restart"
script = ExtResource("12_xpkfe")

[connection signal="point_scored" from="Bullet" to="Score" method="score_updated"]
[connection signal="body_entered" from="Bullet/CollisionArea" to="Bullet" method="score_point"]
[connection signal="blur_on" from="Player" to="Blur" method="blur_on"]
[connection signal="fire_shot" from="Player" to="Bullet" method="fire_shot"]
[connection signal="game_end" from="Player" to="Boulder" method="game_end"]
[connection signal="game_end" from="Player" to="AnimationPlayer" method="game_end"]
[connection signal="game_end" from="Player" to="RestartButton" method="enable_visibility"]
[connection signal="position_updated" from="Player" to="Bullet" method="recieve_position"]
[connection signal="hit_player" from="Boulder" to="Player" method="hit_boulder"]
[connection signal="timeout" from="Boulder/SpawnTimer" to="Boulder" method="new_boulder"]
[connection signal="blur_off" from="StartButton" to="Blur" method="blur_off"]
[connection signal="pressed" from="StartButton" to="Player" method="start_game"]
[connection signal="pressed" from="StartButton" to="Boulder" method="start_game"]
